--- a/testimonios-free-code-camp/src/App.css
+++ b/testimonios-free-code-camp/src/App.css
@@ -9,6 +9,16 @@ body {
 	background-color: #f5f6f7;
 }
 
+::-webkit-scrollbar {
+	width: 12px;
+	background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-color: #555;
+}
+
 h1 {
 	max-width: 940px;
 	font-size: 2.5em;
@@ -16,6 +26,7 @@ h1 {
 	font-weight: 700;
 	line-height: 1.1;
 	margin: 40px 0;
+	margin-top: 90px;
 }
 
 .App {
