--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -1,38 +1,47 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+	height: 100vh;
+	padding-top: 10px;
+	background-color: #1b1b32;
+	font-family: Lato, sans-serif;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.freeCodeCampLogoContainer {
+	filter: invert(100%);
+	width: 100%;
+	height: 50px;
+	margin: 8px auto 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.freeCodeCampLogo {
+	height: 40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.calculatorContainer {
+	width: 400px;
+	height: 600px;
+	padding: 14px;
+	display: flex;
+	background-color: #99c9ff;
+	border-radius: 20px;
+	border: 5px solid white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fila {
+	margin: 4px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
