--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+	height: 100%;
+	color: white;
+	background-color: #1b1b32;
+	font-family: Tahoma, sans-serif;
+	margin-top: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+	color: #1b1b32;
+	font-size: 25px;
+	font-weight: Roboto, sans-serif;
+	text-align: center;
+	margin: 20px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.taskContainer {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.taskMainList {
+	width: 600px;
+	min-height: 500px;
+	background-color: #d0d0d5;
+	padding: 25px;
+	margin: 10px;
+	justify-content: center;
+	border-radius: 26px;
 }
